unpackaged/main/default/objects/Vehicle_Skill__c/Vehicle_Skill__c.object-meta.xml
<CustomObject>
    <description>Junction object between Vehicle Type and Skill</description>
    <label>Vehicle Skill</label>
    <nameField>
        <displayFormat>VS-{0000}</displayFormat>
        <label>Vehicle Skill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>