unpackaged/main/default/objects/Vehicle_Skill__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <label>Skill</label>
    <referenceTo>ProfileSkill</referenceTo>
    <relationshipLabel>Vehicle Skills</relationshipLabel>
    <relationshipName>Vehicle_Skills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>