unpackaged/main/default/objects/Vehicle_Skill__c/fields/Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level__c</fullName>
    <description>Amount of Skill the resource will be granted when the vehicle is assigned</description>
    <label>Skill Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>