unpackaged/main/default/objects/Vehicle_Skill__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <referenceTo>Vehicle_Type__c</referenceTo>
    <relationshipLabel>Vehicle Skills</relationshipLabel>
    <relationshipName>Vehicle_Skills</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>