unpackaged/main/default/objects/Vehicle_Skill__c/validationRules/Skill_Level_is_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Skill_Level_is_zero</fullName>
    <active>true</active>
    <errorConditionFormula>Skill_Level__c &lt;= 0</errorConditionFormula>
    <errorMessage>Skill level Cant be Zero or Less.</errorMessage>
</ValidationRule>