unpackaged/main/default/objects/Vehicle_Skill__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Skill__c</columns>
    <columns>Skill_Level__c</columns>
    <columns>Vehicle_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>